# nitro-enclave-cvv

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.md  enable_modvsock.sh
nitro-cvv-client-test/: Cargo.toml
nitro-cvv-client-test/diag/: cid.c  cid2.c  cid3.c  client  client.c  server  server.c
nitro-cvv-client-test/src/: main.rs  vsock_client.rs
nitro-cvv-gateway/: Cargo.toml
nitro-cvv-host/: Cargo.toml
nitro-cvv-host/src/: aws.rs  cvv.rs  main.rs  session.rs
nitro-cvv-secret/: Cargo.toml  README.md
nitro-cvv-secret/src/: aws.rs  main.rs  session.rs  vsock.rs
nitro-rs/: Cargo.toml
nitro-rs/src/: lib.rs  logging.rs  socket.rs  utils.rs
nitro-rs/src/message/: header.rs  mod.rs
nitro-rs/src/message/commands/: cmd_cy.rs  cmd_z0.rs  command.rs  mod.rs  z01.rs
nitro-tokio/: Cargo.toml
nitro-tokio/src/: io_result.rs  io_utils.rs  lib.rs  message_utils.rs
