[workspace]
resolver = "3"
members  = ["nitro-cvv-client-test", "nitro-cvv-gateway","nitro-cvv-host", "nitro-cvv-secret", "nitro-rs", "nitro-tokio"]

[workspace.dependencies]
anyhow = "1.0.101"

nix = { version = "0.30.1", features = ["net", "socket", "user"] }

tokio       = { version = "1.49", features = ["full"] }
tokio-util  = { version = "0.7.18", features = ["full"] }
tokio-vsock = "0.7.2"

