[package]
name = "nitro-cvv-host"
version = "0.1.0"
edition = "2024"

[dependencies]
nitro       = { path = "../nitro-rs" }
nitro-tokio = { path = "../nitro-tokio" }

anyhow = { workspace = true }

tokio       = { workspace = true }
tokio-util  = { workspace = true }
tokio-vsock = { workspace = true }

serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

des    = "0.8.1"
hex    = "0.4.3"
base64 = "0.21"
log    = "0.4"

aws-config = "1.8.14"
aws-sdk-kms = "1.102.0"
