[package]
name = "nitro-cvv-secret"
version = "0.1.0"
edition = "2024"

[dependencies]
nitro = { path = "../nitro-rs" }

aws-config = "1.1.0"
aws-sdk-secretsmanager = "1.11.0"
aws-sdk-kms = "1.11.0"
aws-secretsmanager-caching = "0.2.0"

tokio = { version = "1.49", features = ["full"] }
tokio-vsock = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.21"
log = "0.4"
